--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -29,4 +29,4 @@ jobs:
       run: pip install pip-tools
 
     - name: Sync dependencies
-      run: pip-sync requirements.txt
+      run: pip-sync requirements/requirements.txt
