--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -30,3 +30,9 @@ jobs:
 
     - name: Sync dependencies
       run: pip-sync requirements/requirements.txt
+
+    - name: Install flake8
+      run: pip install flake8
+
+    - name: Run flake8
+      run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
