--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -45,3 +45,6 @@ jobs:
 
     - name: Run unit tests
       run: pytest --disable-warnings --maxfail=1
+    
+    - name: Run basic CLI check
+      run: python core/import_udl_to_nominal.py --help || true
