ci: added labeling actions

--- a/.github/workflows/cli-check.yml
+++ b/.github/workflows/cli-check.yml
@@ -1,18 +1,15 @@
-name: 'CLI Check'
+name: "CLI Check"
 
 on:
   push:
-    branches: [ main ]
-    tags: [ 'v*' ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
-
-permissions:
-  contents: read
+    branches: [main]
 
 jobs:
   cli:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,13 +17,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: 3.13
 
-      - name: Install pip-tools
-        run: pip install pip-tools
+      - name: Install dependencies
+        run: |
+          pip install pip-tools
+          pip-sync requirements/requirements.txt
 
-      - name: Sync dependencies
-        run: pip-sync requirements/requirements.txt
-
-      - name: Run CLI check
+      - name: CLI Help Check
         run: python core/import_udl_to_nominal.py --help || true
