--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,27 +1,26 @@
-name: 'lint'
+name: "Lint"
 
 on:
   push:
-    branches: [ main ]
-    tags: [ 'v*' ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
-
-permissions:
-  contents: read
+    branches: [main]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.13'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.13
 
-    - name: Install linter
-      run: pip install flake8
+      - name: Install ruff
+        run: pip install ruff
 
-    - name: Run flake8
-      run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+      - name: Run lint checks
+        run: ruff check .
