--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Sync dependencies
         run: pip-sync requirements/requirements.txt
 
-      - name: Install flake8
-        run: pip install flake8
+      - name: Install ruff
+        run: pip install ruff
 
-      - name: Run flake8
-        run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+      - name: Run ruff checks
+        run: ruff check .
 
       - name: Install test dependencies
         run: pip install pytest
