--- a/.github/workflows/cli-check.yml
+++ b/.github/workflows/cli-check.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   cli:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     env:
       BASIC_AUTH: ${{ secrets.BASIC_AUTH }}
