--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,13 @@ authors = [{name = "Tarun Prakash"}]
 license = {file = "LICENSE"}
 requires-python = ">=3.11"
 dependencies = [
-    "dotenv",
+    "python-dotenv",
     "nominal",
     "pandas",
     "questionary",
     "requests",
-    "urllib3"
+    "urllib3",
+    "connect-python"
 ]
 
 [project.scripts]
